# forest_of_magic

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/Modules/: FOMGetLua.cmake
editor/: CMakeLists.txt  editor.cpp  main.cpp
engine/: CMakeLists.txt  Developing.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  GameOjbect.cpp  GameOjbect.hpp  Player.cpp  TextureManager.cpp  TextureManager.hpp  engine.cpp
engine/include/: Engine.hpp  Exceptions.hpp  GameManager.hpp  Project.hpp  Renderer.hpp  Window.hpp
engine/include/fom/: Game.hpp  Player.hpp  ShapeGenerator.hpp
engine/shape_generator/: ShapeGenerator.cpp
engine/src/: Engine.cpp  GameManager.cpp  Renderer.cpp  Window.cpp
engine/src/fom/: Game.cpp  GameOjbect.cpp  Player.cpp
fom/: CMakeLists.txt
fom/draft/scripter/include/scripter/: ScriptState.hpp
fom/draft/scripter/src/: scripter.cpp
fom/draft/scripter/src/examples/scripts/: some_script.lua
fom/draft/shape_generator/src/: shape_generator.cpp
fom/draft/some_code/: Developing.hpp  Game.cpp  Player.hpp  TextureManager.hpp
fom/include/fom/: fom.h
fom/src/fom/: fom.c
fom_engine/: CMakeLists.txt
fom_engine/ext_libs/: CMakeLists.txt
fom_engine/ext_libs/lua/: example_definitions.cmake
fom_engine/ext_libs/my_lib/: my_lib.cpp  my_lib.hpp
fom_engine/fom/: CMakeLists.txt
fom_engine/fom/include/fom/: fom.hpp
fom_engine/fom/src/: fom.cpp
fom_engine/scripter/: CMakeLists.txt
fom_engine/scripter/include/scripter/: scripter.hpp
fom_engine/scripter/src/: ScriptState.cpp  scripter.cpp
fom_engine/scripter/src/examples/: scripter_examples.cpp
fom_engine/shape_generator/: CMakeLists.txt
fom_engine/shape_generator/include/shape_generator/: shape_generator.hpp
fom_engine/shape_generator/src/: shape_generator.cpp
game/: CMakeLists.txt  Game.hpp  Makefile  app.cpp  game.cpp  module.cpp  windows_functions.h
game/assets/: info.txt
graphics/: graphics.c
lua_code/: doscript.c  loadmodule.c
lua_code/scripts/: eatyguy0.lua  mymodule.lua  script.lua  use_mymodule.lua
lua_code/user_specific_help_scripts/: set_env_path.bat
prototype/: README.md  main.py
vs17/: vs17.sln  vs17.vcxproj  vs17.vcxproj.filters
